스크롤이벤트 오류 해결

--- a/src/styles/myInfo.scss
+++ b/src/styles/myInfo.scss
@@ -198,7 +198,8 @@ $white : #f8f8f8;
                 }
 
                 .skillsTxt {
-                    p {
+                    p { 
+                        cursor: pointer;
                         font-size: 15px;
                     }
                 }
