--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,15 +8,15 @@ $white : #f8f8f8;
 @mixin txtFrontendPosition(){
     position: absolute;
     top: calc(50% - 13vw);
-    right: 0;
     left: 0;
+    right: 0;
     white-space : nowrap;
 }
 @mixin txtMyNamePosition(){
     position: absolute;
     bottom: calc(50% - 13vw);
-    right: 0;
     left: 0;
+    right: 0;
     white-space : nowrap;
 }
 
@@ -30,11 +30,13 @@ $white : #f8f8f8;
     .main_wrap{
         position: absolute;
         top: 50%;
-        left: 50%;
+        left: 0;
         width: 100%;
         min-height: 650px;
-        transform: translate(-50%, -50%);
+        transform: translate(0, -50%);
+        overflow: hidden;
         .txt{
+            width: 100%;
             font-size: 10vw;
             font-weight: 700;
             line-height: 1em;
@@ -84,7 +86,6 @@ $white : #f8f8f8;
 /* 1024px 시작 (태블릿) */
 @media screen and (min-width:1024px){
     .Main{
-        max-width: 1024px;
         .main_wrap{
             margin: 0 auto;
             .txt{
