--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,6 @@
 
 @import "./main.scss";
 @import "./myInfo.scss";
-@import "./mySkills.scss";
 @import "./myProjects.scss";
 @import "./contact.scss";
 @import "./header.scss";
@@ -72,11 +71,14 @@ h1{
     position: relative;
     background-color: #222;
     .bgImage{
-        position: fixed;
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         z-index: 1;
         background-image: url(../../public/img/sky.jpg);
+        background-attachment : fixed;
         background-size: cover;
         background-position: center;
         opacity: 0.5;
