--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,129 +1,7 @@
 @charset "utf-8";
 
-@import "./main.scss";
-@import "./myInfo.scss";
-@import "./myProjects.scss";
-@import "./contact.scss";
-@import "./header.scss";
-
-@mixin title($main-color: #9BCE84, $shadow-color: #6E398D) {
-    margin-bottom: 4vw;
-    text-shadow: 2px 2px 0 $shadow-color;
-    color: $main-color;
-    font-size: 7vw;
-    line-height: 1.3em;
-    text-align: center;
-}
-
-@keyframes moveDown{
-    0%{
-        margin-top: 0;
-    }
-    100%{
-        margin-top: 5px;
-    }
-}
-
-h1{
-    @include title
-}
-.scrollDown{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    height: 40px;
-    text-align: center;
-    .material-symbols-outlined{
-        color: $white;
-        font-size: 30px;
-        transform: rotate(90deg);
-        animation-name: moveDown;
-        animation-duration: 0.8s;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-        cursor: pointer;
-    }
-} 
-.slick-dots {
-    ul{
-        width: 100%;
-        padding: 0 50px;
-        margin: 0px; 
-        box-sizing: border-box;
-        li{
-            width: calc(100% / 6);
-            padding: 10px 0 ;
-            margin: 0;
-            border-bottom: 3px solid #fff;
-            opacity: 0.7;
-            font-size: 16px;
-            line-height: 1.2em;
-        }
-        .slick-active{
-            opacity: 1;
-        }
-    }
-   
-}
-
-.App{
-    position: relative;
-    background-color: #081223;
-}
-
-/* 600px 시작 (태블릿) */
-@media screen and (min-width:600px){
-    h1{
-        font-size: 6vw;
-        text-shadow: 4px 4px 0 $purple;
-    }
-    .scrollDown{
-        .material-symbols-outlined{
-            font-size: 40px;
-        }
-    } 
-}
-
-/* 1024px 시작 (pc) */
-@media screen and (min-width:1024px){
-    h1{
-        margin-bottom: 20px;
-        font-size: 50px;
-        text-shadow: 4px 4px 0 $purple;
-    }
-    .scrollDown{
-        .material-symbols-outlined{
-            font-size: 45px;
-        }
-    } 
-    .slick-dots{
-        margin-bottom: -20px;
-        ul{
-            width: calc(100% - 280px);
-            max-width: 1024px;
-            padding: 0 10px;
-            margin: 0 auto;
-            li{
-                font-size: 18px;
-            }
-        }
-    }
-}
-
-/* 1240px 시작 (pc) */
-@media screen and (min-width:1240px){
-    .slick-dots{
-        bottom: -40px;
-        width: 100%;
-        ul{
-            width: 100%;
-            max-width: 100%;
-            padding: 0 10px;
-            margin: 0 auto;
-            li{
-                font-size: 18px;
-            }
-        }
-    }
-}
+@import "./component/header.scss";
+@import "./component/home.scss";
+@import "./component/skills.scss";
+@import "./component/project.scss";
+@import "./app.scss";
